--- a/dorm-admin/src/main/resources/application.yml
+++ b/dorm-admin/src/main/resources/application.yml
@@ -30,6 +30,8 @@ spring:
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
 
 pagehelper:
   helper-dialect: mysql
@@ -39,4 +41,3 @@ pagehelper:
 logging:
   level:
     com.kaiyu.dao: debug
-
