--- a/dorm-admin-page/package.json
+++ b/dorm-admin-page/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.21.1",
     "element": "^0.1.4",
     "element-ui": "^2.15.2",
+    "font-awesome": "^4.7.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
